# extensible-effects

./: .gitignore  .travis.yml  Choose.hp  Choose.prof  LICENSE  Makefile  NdetEff.hp  NdetEff.prof  README.md  default.nix  extensible-effects.cabal  index.html  shell-7.10.1.nix  shell-7.6.3.nix  shell-8.2.1.nix  shell-8.2.2.nix  shell.nix  stack-7.10.3.yaml  stack-8.0.1.yaml  stack-8.2.2.yaml  stack.yaml
benchmark/: Benchmarks.hs  benchmarks.html
docs/: _config.yml  benchmarks.html  benchmarks_nondeterminism.html  index.html
nix/: default.nix  shell-7.10.3.nix  shell-7.8.4.nix  shell-8.0.2.nix
perf/: Choose.hs  NdetEff.hs
src/: Eff1.hs
src/Control/: Eff.hs  Eff1.hs
src/Control/Eff/: Choose.hs  Choose1.hs  Coroutine.hs  Cut.hs  Cut1.hs  Example.hs  Exception.hs  Exception1.hs  Extend.hs  Fail.hs  Fresh.hs  ImplementYourOwnEffect.hs  Internal.hs  Lift.hs  Lift1.hs  Logic.hs  NdetEff.hs  Operational.hs  QuickStart.hs  State.hs  Trace.hs
src/Control/Eff/Example/: Fresh.hs
src/Control/Eff/Extend/: Tutorial.hs
src/Control/Eff/Logic/: Choose.hs  Core.hs  Experimental.hs  NDet.hs  NdetEff.hs  Perf.hs
src/Control/Eff/Operational/: Example.hs
src/Control/Eff/Reader/: Lazy.hs  Lazy1.hs  Strict.hs  Strict1.hs
src/Control/Eff/State/: Example.hs  Example2.hs  Lazy.hs  Lazy1.hs  LazyState.hs  OnDemand.hs  Strict.hs  Strict1.hs
src/Control/Eff/Writer/: Lazy.hs  Lazy1.hs  Strict.hs  Strict1.hs
src/Control/Monad/Free/: Reflection.hs
src/Data/: FTCQueue.hs  FTCQueue1.hs  OpenUnion.hs  OpenUnion1.hs  OpenUnion2.hs  OpenUnion51.hs
src/Data/OpenUnion/: Imports.hs
src/Data/OpenUnion/Internal/: Base.hs  OpenUnion1.hs  OpenUnion2.hs
stack/: stack-7.10.3.yaml  stack-7.8.4.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.4.1.yaml  stack-8.4.2.yaml  stack-8.4.3.yaml  stack-8.4.4.yaml  stack-8.6.1.yaml  stack-8.6.2.yaml  stack-8.6.3.yaml  stack-8.6.5.yaml  stack-8.8.3.yaml  stack-8.8.4.yaml
test/: DoctestRun.hs  Test.hs  Utils.hs
test/Control/Eff/: QuickStart.hs  Scope.hs  Test.hs
test/Control/Eff/Choose/: Test.hs
test/Control/Eff/Coroutine/: Test.hs
test/Control/Eff/Cut/: Test.hs
test/Control/Eff/Example/: Test.hs
test/Control/Eff/Example/Fresh/: Test.hs
test/Control/Eff/Exception/: Test.hs
test/Control/Eff/Fresh/: Test.hs
test/Control/Eff/Lift/: Test.hs
test/Control/Eff/Logic/: Test.hs
test/Control/Eff/Logic/Choose/: Test.hs
test/Control/Eff/Logic/NDet/: Bench.hs  Test.hs
test/Control/Eff/Logic/NdetEff/: Bench.hs  Test.hs
test/Control/Eff/NdetEff/: Bench.hs  Test.hs
test/Control/Eff/Operational/: Test.hs
test/Control/Eff/Reader/Lazy/: Test.hs
test/Control/Eff/Reader/Strict/: Test.hs
test/Control/Eff/State/Lazy/: Test.hs
test/Control/Eff/State/LazyState/: Test.hs
test/Control/Eff/State/OnDemand/: Test.hs
test/Control/Eff/State/Strict/: Test.hs
test/Control/Eff/Trace/: Test.hs
test/Control/Eff/Writer/Lazy/: Test.hs
test/Control/Eff/Writer/Strict/: Test.hs
